solving code smells